# yomitoku-dev

./: .gitignore  404.html  LICENSE  README.md  README_EN.md  demo.md  dockerfile  gallery.md  index.html  mkdocs.yml  output.html  pyproject.toml  sitemap.xml  table_structure_recognitizer.yaml
.github/workflows/: build-and-publish-docs.yaml  build-and-publish.yml  lint-and-test.yml
configs/: layout.yaml  layout_parse.yaml  layout_parser.yaml  layout_parser_rtdetrv2.yaml  ocr.yaml  table_structure_recognition.yaml  text_detection.yaml  text_detector.yaml  text_recognition.yaml  text_recognizer.yaml  tsr.yaml
docs/: getting-started.md  index.md  installation.md  usage.md
en/: index.html
en/installation/: index.html
en/usage/: index.html
examples/: layout_parse.py  simple_ocr.py
faq/: index.html
getting-started/: index.html
installation/: index.html
scripts/: convert_onnx.py  convert_onxx_text_recognizer.py  register_hugging_face_hub.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/en/: index.html
site/installation/: index.html
site/search/: search_index.json
site/usage/: index.html
src/yomitoku/: __init__.py  base.py  constants.py  document_analyzer.py  layout_alalyzer.py  layout_analyzer.py  layout_parse.py  layout_parser.py  ocr.py  reading_order.py  table_structure_recognition.py  table_structure_recognizer.py  (+5 more)
static/: gallery1.md  gallery2.md  gallery3.md  gallery6.md
tests/: test_base.py  test_cli.py  test_export.py  test_layout_analyzer.py  test_ocr.py  test_sample.py
usage/: index.html
(+53 files in other folders)
