[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "yomitoku"
dynamic = ["version"]
authors = [{name = "Kotaro Kinoshita"}]
description = "Yomitoku is a document image analysis package powered by AI technology for the Japanese language."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["Japanese", "OCR", "Deep Learning"]
dependencies = [
    "huggingface-hub>=0.26.1",
    "omegaconf>=2.3.0",
    "opencv-python>=4.10.0.84",
    "pyclipper>=1.3.0.post6",
    "pydantic>=2.9.2",
    "shapely>=2.0.6",
    "timm>=1.0.11",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]

[tool.hatch.version]
source = "vcs"
tag-pattern = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"


[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
version_scheme = "no-guess-dev"

[tool.uv]
dev-dependencies = [
    "mkdocs-material>=9.5.44",
    "mkdocs>=1.6.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
]

